# sabores-da-terra

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  compose.yaml  entrypoint.sh  index.html  mkdocs.yml  nginx.conf  pyproject.toml
.github/workflows/: pipeline.yaml
auth/: index.html
docs/: auth.md  entidades.md  fluxo.md  get_started.md  index.md  infra.md  rules.md
docs/routers/: auth.md  index.md  orders.md  payment.md  products.md  users.md
entidades/: index.html
fluxo/: index.html
get_started/: index.html
infra/: index.html
migrations/: env.py
migrations/versions/: 098a2af50def_create_first_models.py  42d11860e1d2_add_new_column_is_active_on_product.py  49c170a7ee5a_adding_relationship_in_orderitem_table_.py  579dc7c87d4e_create_product_name_column_on_products_.py  6cfb242c1ea4_create_updated_at_field_in_users_table.py  e5df4aacd431_create_image_column.py  f24c42f2d1e7_adding_unique_constraint_on_the_name_.py
routers/: index.html
routers/auth/: index.html
routers/orders/: index.html
routers/payment/: index.html
routers/products/: index.html
routers/users/: index.html
rules/: index.html
search/: search_index.json
src/sabores_da_terra/: app.py  database.py  models.py  notification.py  schemas.py  security.py  settings.py
src/sabores_da_terra/controllers/: order_controller.py  payment_controller.py  product_controller.py  user_controler.py
src/sabores_da_terra/models/: __init__.py  order.py  order_item.py  product.py  user.py
src/sabores_da_terra/routers/: auth.py  orders.py  payment.py  products.py  users.py  web_page.py
src/sabores_da_terra/schemas/: __init__.py  extras.py  order.py  payment.py  product.py  user.py
src/sabores_da_terra/services/: order_service.py  payment_service.py  product_service.py  user_service.py
src/sabores_da_terra/templates/: admin.html  auth_base.html  base.html  cart.html  index.html  login.html  payment_failure.html  payment_success.html  perfil.html  product.html  register.html
src/sabores_da_terra/templates/static/css/: admin.css  base.css  cart.css  index.css  login.css  perfil.css  product.css  register.css
src/sabores_da_terra/utils/: checkout_data.py
src/sabores_da_terra_bot/: main.py
tests/: conftest.py  test_auth.py  test_orders.py  test_payment.py  test_products.py  test_security.py  test_users.py
tests/assets/: event_stripe.txt  hook_header.txt  hook_payload.txt
