[project]
name = "sabores-da-terra"
version = "0.1.0"
description = ""
authors = [
    {name = "guilherme",email = "guilherme-lopes58@hotmail.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
]

[tool.poetry]
packages = [{include = "sabores_da_terra", from = "src"}]


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.18"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
