[project]
name = "sabores-da-terra"
version = "0.1.0"
description = ""
authors = [
    {name = "guilherme",email = "guilherme-lopes58@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "testcontainers (>=4.12.0,<5.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
]

[tool.poetry]
packages = [{include = "sabores_da_terra", from = "src"}]


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.18"
ruff = "^0.12.11"
pytest = "^8.4.2"
freezegun = "^1.5.5"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
